--- a/Prog3Aula00.ipynb
+++ b/Prog3Aula00.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUqZZO6o+KLxCDpy0P78LQ",
+      "authorship_tag": "ABX9TyMC2LXcyakfjICV6uLrO5h7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,6 +113,157 @@
           },
           "metadata": {},
           "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fibonacci_iterativa(n: int):\n",
+        "    f0 = 0\n",
+        "    f1 = 1\n",
+        "\n",
+        "    if n == 0:\n",
+        "        return f0\n",
+        "\n",
+        "    if n == 1:\n",
+        "        return f1\n",
+        "\n",
+        "    else:\n",
+        "        for i in range(2, n + 1):\n",
+        "            fn = f0 + f1\n",
+        "            f0 = f1\n",
+        "            f1 = fn\n",
+        "\n",
+        "        return f1"
+      ],
+      "metadata": {
+        "id": "y1BNayqd1OEy"
+      },
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fibonacci_iterativa(19)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4ud7Qjk74UWU",
+        "outputId": "ce4bfe77-481e-4cf7-989e-c0483c64eced"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4181"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fibonacci_iterativa_py(n: int):\n",
+        "    f0, f1 = 0, 1\n",
+        "\n",
+        "    if n == 0:\n",
+        "        return f0\n",
+        "\n",
+        "    if n == 1:\n",
+        "        return f1\n",
+        "\n",
+        "    else:\n",
+        "        for i in range(2, n + 1):\n",
+        "            f0, f1 = f1, f0 + f1\n",
+        "\n",
+        "        return f1"
+      ],
+      "metadata": {
+        "id": "bhCiDN48-V7-"
+      },
+      "execution_count": 87,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fibonacci_iterativa_py(11)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g8_LYmj4-mp8",
+        "outputId": "6ac78502-2f56-47c2-84ba-04fd7d59db40"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "89"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fibonacci_recursiva(n: int):\n",
+        "    f0 = 0\n",
+        "    f1 = 1\n",
+        "\n",
+        "    if n == 0:\n",
+        "        return f0\n",
+        "\n",
+        "    if n == 1:\n",
+        "        return f1\n",
+        "\n",
+        "    else:\n",
+        "        return fibonacci_recursiva(n - 1) + fibonacci_recursiva(n - 2)"
+      ],
+      "metadata": {
+        "id": "9pvGfxQE1OCF"
+      },
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fibonacci_recursiva(19)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ReNQrLZE7ATd",
+        "outputId": "ebc3cd8e-29ca-4e59-b946-17f5ab8f0916"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4181"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
         }
       ]
     }
